Fix accessibility contrast Lighthouse issue

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -234,7 +234,7 @@ body {
     background-color: #eee;
     border-radius: 5px;
     box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
-    color: grey;
+    color: #404040;
 }
 
 .img-product-kindle {
